--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=healthy-api
 server.servlet.context-path=/api/v1
 
 #DB Conf
-spring.datasource.url=jdbc:postgresql://localhost:5432/healthy-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthy_db
 spring.datasource.username=postgres
-spring.datasource.password=NomeolvideS
+spring.datasource.password=adminadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Properties JPA/Hibernate
