--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=never
 spring.sql.init.data-locations=classpath:data-test.sql
+healthyy.openapi.dev-url = http://localhost:8080/api/v1
