--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=healthy-api
 server.servlet.context-path=/api/v1
 
 #DB Conf
-spring.datasource.url=jdbc:postgresql://localhost:5433/healthy_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthy_db
 spring.datasource.username=postgres
 spring.datasource.password=adminadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,6 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=never
+spring.sql.init.mode=
 spring.sql.init.data-locations=classpath:data-test.sql
 healthyy.openapi.dev-url = http://localhost:8080/api/v1
